--- a/devtools/devtools_scraper_panel.html
+++ b/devtools/devtools_scraper_panel.html
@@ -24,61 +24,28 @@
 			class="split__panel split__panel--sidebar-1">
 			<div class="split__panel__bd">
 				<nav class="absolute inset-0 nav nav--main ">
-					<ul>
+					<ul class="w-100">
 						<li>
-							<a id="sidepane1" class="nav__item" title="Components" href="#/component-tree">
-								<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
-									class="nav__item-icon" id="i-import" viewBox="0 0 32 32" fill="none" stroke="#000"
-									stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-									<path class="nav__icon-stroke"
-										d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 16 L16 24 24 16" />
-								</svg>
+							<a id="sidepane1" class="nav__item" title="Components" href="./views/Import.html">
+								<img src="./images/import.svg" class="nav__item-icon" />
 								<span class="nav__item-label">Import</span>
 							</a>
 						</li>
 						<li>
-							<a id="sidepane2" class="nav__item" title="Data" href="#/data">
-								<svg aria-hidden="true" width="20px" height="20px" viewBox="0 0 36 36"
-									xmlns="http://www.w3.org/2000/svg" class="nav__item-icon">
-									<path class="nav__icon-fill"
-										d="M18 9.83a1 1 0 00-1 1v8.72l5.9 4a1 1 0 001.1-1.67l-5-3.39v-7.66a1 1 0 00-1-1z">
-									</path>
-									<path class="nav__icon-fill promises-icon-circle"
-										d="M18 2a16.09 16.09 0 00-14 8.26V5.2a1 1 0 00-2 0V14h8.8a1 1 0 000-2H5.35a14 14 0 113.23 16.35 1 1 0 00-1.35 1.48A16 16 0 1018 2z">
-									</path>
-								</svg>
+							<a id="sidepane2" class="nav__item" title="Data" href="./views/History.html">
+								<img src="./images/history.svg" class="nav__item-icon" />		
 								<span class="nav__item-label">History</span>
 							</a>
 						</li>
 						<li>
-							<a id="sidepane3" class="nav__item" title="Info" href="#/info">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="20px" height="20px"
-									viewBox="0 0 256 256" xml:space="preserve" class="nav__item-icon">
-									<g transform="translate(128 128) scale(0.72 0.72)">
-										<g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
-											transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
-											<path class="nav__icon-fill"
-												d="M 34.268 90 c -0.669 0 -1.338 -0.132 -1.975 -0.395 l -9.845 -4.079 c -1.274 -0.527 -2.267 -1.519 -2.795 -2.795 c -0.528 -1.274 -0.528 -2.679 0 -3.953 c 1.216 -2.936 0.075 -5.558 -1.399 -7.032 c -1.474 -1.475 -4.094 -2.615 -7.033 -1.399 c -1.273 0.529 -2.677 0.528 -3.952 0.001 c -1.275 -0.528 -2.268 -1.52 -2.795 -2.795 l -4.078 -9.844 c -1.089 -2.63 0.164 -5.657 2.794 -6.748 C 6.128 49.745 7.174 47.085 7.174 45 c 0 -2.084 -1.046 -4.745 -3.983 -5.962 c -1.274 -0.528 -2.267 -1.52 -2.795 -2.795 c -0.528 -1.274 -0.528 -2.678 0 -3.952 l 4.078 -9.844 c 1.09 -2.631 4.12 -3.883 6.747 -2.795 c 2.936 1.216 5.558 0.075 7.033 -1.399 c 1.474 -1.474 2.616 -4.095 1.399 -7.032 c -1.09 -2.631 0.164 -5.657 2.795 -6.747 l 9.844 -4.077 c 1.274 -0.528 2.678 -0.528 3.953 0 c 1.275 0.528 2.268 1.521 2.795 2.796 c 1.216 2.936 3.877 3.982 5.962 3.982 c 2.085 0 4.745 -1.046 5.962 -3.983 c 1.09 -2.631 4.115 -3.885 6.748 -2.795 l 9.845 4.077 c 1.274 0.528 2.267 1.52 2.795 2.795 c 0.527 1.274 0.527 2.679 -0.001 3.953 c -1.217 2.936 -0.074 5.557 1.399 7.031 c 1.475 1.474 4.097 2.615 7.032 1.399 c 1.277 -0.528 2.68 -0.527 3.953 0 c 1.275 0.528 2.268 1.521 2.796 2.796 l 4.077 9.843 c 1.089 2.631 -0.165 5.658 -2.795 6.747 c -2.937 1.217 -3.983 3.878 -3.983 5.962 c 0 2.085 1.046 4.745 3.983 5.962 h 0.001 c 2.629 1.091 3.883 4.117 2.795 6.747 l -4.079 9.845 c -0.527 1.273 -1.52 2.266 -2.795 2.795 c -1.273 0.528 -2.679 0.528 -3.954 -0.001 c -2.934 -1.217 -5.557 -0.074 -7.031 1.399 c -1.474 1.475 -2.615 4.096 -1.399 7.032 c 0.528 1.274 0.528 2.678 0.001 3.953 c -0.528 1.275 -1.521 2.267 -2.796 2.796 l -9.844 4.077 c -2.63 1.09 -5.657 -0.166 -6.748 -2.794 c -1.217 -2.938 -3.877 -3.985 -5.962 -3.985 c -2.084 0 -4.746 1.047 -5.962 3.984 c -0.527 1.273 -1.52 2.266 -2.794 2.795 C 35.607 89.868 34.937 90 34.268 90 z M 25.491 80.293 l 8.349 3.459 c 2.105 -4.294 6.31 -6.926 11.161 -6.926 c 0 0 0 0 0 0 c 4.852 0 9.056 2.633 11.16 6.926 l 8.348 -3.459 c -1.547 -4.524 -0.435 -9.358 2.996 -12.788 c 3.431 -3.431 8.265 -4.544 12.789 -2.996 l 3.459 -8.348 c -4.294 -2.104 -6.926 -6.309 -6.926 -11.16 c 0 -4.852 2.632 -9.057 6.926 -11.162 l -3.459 -8.349 c -4.523 1.549 -9.359 0.435 -12.789 -2.994 c -3.432 -3.431 -4.543 -8.265 -2.996 -12.789 l -8.348 -3.458 c -2.103 4.293 -6.308 6.925 -11.16 6.925 c -4.852 0 -9.057 -2.632 -11.162 -6.925 l -8.349 3.458 c 1.548 4.524 0.436 9.358 -2.995 12.789 c -3.431 3.431 -8.264 4.544 -12.789 2.994 l -3.458 8.349 c 4.294 2.105 6.926 6.31 6.926 11.162 c 0 4.852 -2.632 9.056 -6.926 11.16 l 3.458 8.348 c 4.525 -1.547 9.359 -0.435 12.789 2.995 C 25.927 70.935 27.039 75.769 25.491 80.293 z M 84.511 56.503 c 0.001 0 0.002 0 0.003 0.001 C 84.513 56.503 84.512 56.503 84.511 56.503 z M 45.001 65.781 C 33.543 65.781 24.22 56.459 24.22 45 c 0 -11.459 9.323 -20.781 20.781 -20.781 S 65.783 33.541 65.783 45 C 65.783 56.459 56.46 65.781 45.001 65.781 z M 45.001 30.218 C 36.851 30.218 30.22 36.85 30.22 45 c 0 8.151 6.631 14.782 14.781 14.782 c 8.151 0 14.782 -6.631 14.782 -14.782 C 59.783 36.85 53.153 30.218 45.001 30.218 z"
-												style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
-												transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-										</g>
-									</g>
-								</svg>
+							<a id="sidepane3" class="nav__item" title="Info" href="./views/Settings.html">
+								<img src="./images/settings.svg" class="nav__item-icon" />		
 								<span class="nav__item-label">Settings</span>
 							</a>
 						</li>
 						<li>
-							<a id="sidepane4" class="nav__item" title="Info" href="#/info">
-								<svg aria-hidden="true" width="20px" height="20px" viewBox="0 0 36 36"
-									xmlns="http://www.w3.org/2000/svg" class="nav__item-icon">
-									<circle class="nav__icon-fill" cx="17.97" cy="10.45" r="1.4"></circle>
-									<path class="nav__icon-fill"
-										d="M21 25h-2V14.1h-3a1 1 0 000 2h1V25h-2a1 1 0 000 2h6a1 1 0 000-2z">
-									</path>
-									<path class="nav__icon-fill"
-										d="M18 34a16 16 0 1116-16 16 16 0 01-16 16zm0-30a14 14 0 1014 14A14 14 0 0018 4z">
-									</path>
-								</svg>
+							<a id="sidepane4" class="nav__item" title="Info" href="https://github.com/SubbuRamanathan/sitecore-scrape-and-migrate" target="_blank">
+								<img src="./images/info.svg" class="nav__item-icon" />
 								<span class="nav__item-label">Info</span>
 							</a>
 						</li>
@@ -87,75 +54,22 @@
 			</div>
 			<div class="split__panel__ft nav__footer nav--expanded">
 				<a id="submitIssue" target="_blank" title="Submit an Issue"
-					class="navigation-submit-issue flex items-center justify-center px-3"
-					href="" rel="noopener noreferrer">
-					<svg aria-hidden="true" width="18" height="18" viewBox="0 0 36 36"
-						xmlns="http://www.w3.org/2000/svg">
-						<path class="nav__icon-fill"
-							d="M24.48 9.493V8.21c0-1.068-.303-2.136-.908-3.205-.404-1.068-1.11-1.816-2.119-2.243a6.082 6.082 0 00-3.328-.962c-1.009 0-2.017.32-3.026.962-.807.427-1.513 1.175-2.118 2.243-.606 1.069-.908 2.137-.908 3.205v1.283h-1.816L6.93 5.967l-1.21 1.282 3.328 3.526v.32a15.581 15.581 0 00-1.21 6.09v1.603H3.6v1.923h4.539c.403 2.137 1.11 4.06 2.118 5.77l-4.236 4.487 1.513 1.282 3.934-4.167c1.008 1.282 2.017 2.244 3.026 2.885 1.21.427 2.42.64 3.63.64 1.413 0 2.623-.213 3.632-.64 1.21-.641 2.32-1.496 3.329-2.564l.302-.321 3.934 4.487 1.21-1.602-4.236-4.488c1.009-1.71 1.715-3.632 2.118-5.769h4.54v-1.923h-4.237v-1.603c0-2.137-.303-4.273-.908-6.41h-.303l3.329-3.526-1.21-1.282-3.329 3.526h-1.816zm-10.592 0V8.21c0-1.282.404-2.35 1.21-3.205 1.01-.854 2.119-1.282 3.33-1.282 1.21 0 2.218.428 3.025 1.282.807.855 1.21 1.923 1.21 3.205v1.283h-8.775zm12.104 1.923v.32c.606 1.71.908 3.526.908 5.45 0 1.922-.201 3.632-.605 5.128-.404 1.495-1.11 2.884-2.118 4.166-.807 1.069-1.715 1.924-2.724 2.565a6.081 6.081 0 01-3.328.961c-1.009 0-2.017-.32-3.026-.961s-1.917-1.496-2.724-2.565a26.372 26.372 0 01-2.118-4.166c-.403-1.496-.605-3.206-.605-5.129 0-1.923.303-3.74.908-5.449v-.32h15.432z"
-							fill="#666"></path>
-					</svg>
+					class="navigation-submit-issue flex items-center justify-center px-3" target="_blank"
+					rel="noopener noreferrer" href="https://github.com/SubbuRamanathan/sitecore-scrape-and-migrate/issues">
+					<img src="./images/bug.svg" />
 				</a>
 				<button id="navigationToggle" title="collapse navigation"
 					class="navigation-toggle flex items-center bg-transparent border-0 outline-none appearance-none px-3"
 					type="button">
-					<svg width="18px" height="18px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
-						<path class="nav__icon-fill" d="M12 11h2v19h-2z"></path>
-						<path class="nav__icon-fill"
-							d="M32 4H4a2 2 0 00-2 2v24a2 2 0 002 2h28a2 2 0 002-2V6a2 2 0 00-2-2zM4 6h28v4.2H4zm0 24V11.8h28V30z">
-						</path>
-					</svg>
+					<img src="./images/collapse.svg" />			
 				</button>
 			</div>
 		</div>
-		<div class="container-fluid form-container py-2">
-			<form id="importForm" class="row g-3 p-3">
-				<div class="row py-2 w-100 form-group">
-					<div class="col-lg-2"><strong>Webpage URL(s):</strong></div>
-					<div class="col-lg-6">
-						<textarea id="webpageUrls" name="webpageUrls" class="form-control outline-none w-100" rows="2"
-							placeholder="Enter Website URL(s) (semi-colon separated) or click fetch button to pull from Sitemap"></textarea>
-					</div>
-					<div class="col-lg-1">
-						<a id="fetchUrls" href="#sitemapSection">
-							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-								width="15px" height="15px" viewBox="0 0 511.626 511.627">
-								<g>
-									<path class="nav__icon-fill"
-										d="M503.639,336.899c-5.328-5.328-11.8-7.994-19.417-7.994h-27.405v-54.819c0-9.896-3.617-18.466-10.848-25.695   c-7.231-7.236-15.804-10.852-25.7-10.852H274.091v-54.818h27.404c7.618,0,14.089-2.664,19.417-7.994   c5.329-5.327,7.991-11.798,7.991-19.414v-91.36c0-7.614-2.662-14.087-7.991-19.414c-5.328-5.33-11.799-7.993-19.417-7.993h-91.361   c-7.614,0-14.084,2.663-19.414,7.993c-5.33,5.327-7.992,11.799-7.992,19.414v91.36c0,7.616,2.662,14.084,7.992,19.414   c5.327,5.33,11.8,7.994,19.414,7.994h27.408v54.818H91.363c-9.898,0-18.462,3.619-25.697,10.852   c-7.233,7.229-10.848,15.799-10.848,25.695v54.819H27.406c-7.611,0-14.084,2.666-19.414,7.994C2.663,342.229,0,348.696,0,356.313   v91.358c0,7.617,2.663,14.089,7.992,19.417c5.33,5.328,11.803,7.991,19.414,7.991h91.365c7.611,0,14.084-2.666,19.414-7.991   c5.33-5.328,7.992-11.8,7.992-19.417v-91.358c0-7.617-2.662-14.085-7.992-19.414c-5.33-5.328-11.803-7.994-19.414-7.994H91.36   v-54.819h146.179v54.819h-27.408c-7.614,0-14.084,2.666-19.414,7.994c-5.33,5.329-7.992,11.797-7.992,19.414v91.358   c0,7.617,2.662,14.089,7.992,19.417c5.327,5.328,11.8,7.991,19.414,7.991h91.361c7.618,0,14.086-2.666,19.418-7.991   c5.325-5.332,7.994-11.8,7.994-19.417v-91.358c0-7.617-2.662-14.085-7.994-19.414c-5.332-5.328-11.8-7.994-19.418-7.994h-27.404   v-54.819h146.182v54.819h-27.412c-7.61,0-14.086,2.666-19.417,7.994c-5.325,5.329-7.987,11.797-7.987,19.414v91.358   c0,7.617,2.662,14.089,7.987,19.417c5.331,5.328,11.807,7.991,19.417,7.991h91.365c7.61,0,14.082-2.666,19.41-7.991   c5.332-5.328,7.994-11.8,7.994-19.417v-91.358C511.626,348.696,508.964,342.229,503.639,336.899z" />
-								</g>
-							</svg>
-						</a>
-					</div>
-				</div>
-				<div class="row py-2 mb-3 w-100 form-group">
-					<div class="col-lg-2"><strong>Sitecore URL:</strong></div>
-					<div class="col-lg-6"><input id="sitecoreUrl" name="sitecoreUrl" class="form-control"
-							placeholder="Enter Destination Sitecore URL" type="text"></div>
-					<div class="col-lg-2">
-						<button id="authenticate" class="authenticate btn d-none" type="button" disabled>
-							<span id="authenticateLoading" class="spinner-grow spinner-grow-sm float-left" role="status"
-								aria-hidden="true"></span>
-							<span id="authenticateText" class="float-left d-block">Checking...</span>
-						</button>
-					</div>
-				</div>
-				<div id="mappingTemplateSection" class="d-none w-100 pb-3">
-				</div>
-				<div id="addLinkSection" class="w-100">
-				</div>
-				<button id="save" class="btn btn-info my-2 mr-3" type="submit">Save</button>
-				<button id="import" class="btn btn-info my-2" type="submit">Import</button>
-			</form>
+		<div id="mainContainer" class="container-fluid form-container py-2">
 		</div>
 		<div id="sitemapPanel" class="config-section collapse width h-100">
 			<a class="close-icon">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px"
-					xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-					viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve">
-					<path fill="#231F20"
-						d="M9.016,40.837c0.195,0.195,0.451,0.292,0.707,0.292c0.256,0,0.512-0.098,0.708-0.293l14.292-14.309  l14.292,14.309c0.195,0.196,0.451,0.293,0.708,0.293c0.256,0,0.512-0.098,0.707-0.292c0.391-0.39,0.391-1.023,0.001-1.414  L26.153,25.129L40.43,10.836c0.39-0.391,0.39-1.024-0.001-1.414c-0.392-0.391-1.024-0.391-1.414,0.001L24.722,23.732L10.43,9.423  c-0.391-0.391-1.024-0.391-1.414-0.001c-0.391,0.39-0.391,1.023-0.001,1.414l14.276,14.293L9.015,39.423  C8.625,39.813,8.625,40.447,9.016,40.837z" />
-				</svg>
+				<img src="./images/cross.svg" />		
 			</a>
 			<div class="container">
 				<form id="sitemapForm" class="row g-3 p-3">
@@ -175,12 +89,7 @@
 		</div>
 		<div id="itemPathSection" class="config-section collapse">
 			<a class="close-icon">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px"
-					xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-					viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve">
-					<path fill="#231F20"
-						d="M9.016,40.837c0.195,0.195,0.451,0.292,0.707,0.292c0.256,0,0.512-0.098,0.708-0.293l14.292-14.309  l14.292,14.309c0.195,0.196,0.451,0.293,0.708,0.293c0.256,0,0.512-0.098,0.707-0.292c0.391-0.39,0.391-1.023,0.001-1.414  L26.153,25.129L40.43,10.836c0.39-0.391,0.39-1.024-0.001-1.414c-0.392-0.391-1.024-0.391-1.414,0.001L24.722,23.732L10.43,9.423  c-0.391-0.391-1.024-0.391-1.414-0.001c-0.391,0.39-0.391,1.023-0.001,1.414l14.276,14.293L9.015,39.423  C8.625,39.813,8.625,40.447,9.016,40.837z" />
-				</svg>
+				<img src="./images/cross.svg" />
 			</a>
 			<div class="container overflow-auto h-100">
 				<div class="sitecore-tree" data-rootnode="0de95ae4-41ab-4d01-9eb0-67441b7c2450"></div>
@@ -188,25 +97,23 @@
 		</div>
 		<div id="templatePathSection" class="config-section collapse">
 			<a class="close-icon">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px"
-					xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-					viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve">
-					<path fill="#231F20"
-						d="M9.016,40.837c0.195,0.195,0.451,0.292,0.707,0.292c0.256,0,0.512-0.098,0.708-0.293l14.292-14.309  l14.292,14.309c0.195,0.196,0.451,0.293,0.708,0.293c0.256,0,0.512-0.098,0.707-0.292c0.391-0.39,0.391-1.023,0.001-1.414  L26.153,25.129L40.43,10.836c0.39-0.391,0.39-1.024-0.001-1.414c-0.392-0.391-1.024-0.391-1.414,0.001L24.722,23.732L10.43,9.423  c-0.391-0.391-1.024-0.391-1.414-0.001c-0.391,0.39-0.391,1.023-0.001,1.414l14.276,14.293L9.015,39.423  C8.625,39.813,8.625,40.447,9.016,40.837z" />
-				</svg>
+				<img src="./images/cross.svg" />
 			</a>
 			<div class="container overflow-auto h-100">
 				<div class="sitecore-tree" data-rootnode="3c1715fe-6a13-4fcf-845f-de308ba9741d"></div>
 			</div>
 		</div>
+		<div id="mediaPathSection" class="config-section collapse">
+			<a class="close-icon">
+				<img src="./images/cross.svg" />
+			</a>
+			<div class="container overflow-auto h-100">
+				<div class="sitecore-tree" data-rootnode="3d6658d8-a0bf-4e75-b3e2-d050fabcf4e1"></div>
+			</div>
+		</div>
 		<div id="replaceTextPanel" class="config-section collapse width h-100">
 			<a class="close-icon">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px"
-					xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-					viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve">
-					<path fill="#231F20"
-						d="M9.016,40.837c0.195,0.195,0.451,0.292,0.707,0.292c0.256,0,0.512-0.098,0.708-0.293l14.292-14.309  l14.292,14.309c0.195,0.196,0.451,0.293,0.708,0.293c0.256,0,0.512-0.098,0.707-0.292c0.391-0.39,0.391-1.023,0.001-1.414  L26.153,25.129L40.43,10.836c0.39-0.391,0.39-1.024-0.001-1.414c-0.392-0.391-1.024-0.391-1.414,0.001L24.722,23.732L10.43,9.423  c-0.391-0.391-1.024-0.391-1.414-0.001c-0.391,0.39-0.391,1.023-0.001,1.414l14.276,14.293L9.015,39.423  C8.625,39.813,8.625,40.447,9.016,40.837z" />
-				</svg>
+				<img src="./images/cross.svg" />
 			</a>
 			<form id="replaceTextForm">
 				<div id="replaceTextContainer" class="container p-4 overflow-auto h-100">
