Updated Extension Name & Icon

--- a/options/options.html
+++ b/options/options.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Sitecore - Scrape & Migrate</title>
+    <title>Web Harvester for Sitecore</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/options.css" />
   </head>
   <body>
     <div class="header container">
-        <h1>Sitecore - Scrape & Migrate</h1>
+        <h1>Web Harvester for Sitecore</h1>
     </div>
     <div class="container">
       <p class="note">Thank you for using this extension!</p>
