Added Options Page

--- a/options/options.html
+++ b/options/options.html
@@ -8,12 +8,16 @@
   </head>
   <body>
     <div class="header container">
+        <img src="../assets/images/web-harvester-for-sitecore.png" alt="Web Harvester for Sitecore">
         <h1>Web Harvester for Sitecore</h1>
+        <p class="note">Thank you for using this extension!</p>
     </div>
     <div class="container">
-      <p class="note">Thank you for using this extension!</p>
-      <p class="abstract"></p>
-      <p class="content"></p>
+      <p class="abstract">This Extension enables content administrators/developers to harvest any website's content into Sitecore</p>
+      <p class="content"><b>To migrate a website's content into Sitecore</b>, you must right-click on the intended website page and select 'Inspect Element' or press 'F12' to launch Developer Tools. Navigate to 'Web Harvester' panel in the Developer Tools to begin import process by selecting DOMs and Sitecore Item Path, Template & Fields.</p>
+      <p class="content"><b><span class="danger">IMPORTANT: </span>For importing media</b>, you will need to install the below Sitecore Powershell Module in your Sitecore instance and specify Sitecore credentials(ensure appropriate create permissions for media library) in the 'Settings' tab of 'Web Harvester' DevTools Panel. This Chrome Extension does not collect any information including credentials from you. Please review the <a href="https://github.com/SubbuRamanathan/web-harvester-for-sitecore/blob/main/privacy-policy.md" target="_blank">privacy policy</a> for more details.
+        <a href="https://github.com/SubbuRamanathan/web-harvester-for-sitecore/releases/tag/v1.0" target="_blank">https://github.com/SubbuRamanathan/web-harvester-for-sitecore/releases/tag/v1.0</a>
+      </p>
     </div>
     <div class="container">
       <p class="info">
@@ -22,7 +26,7 @@
         <a href="https://subbu.ca" target="_blank" rel="noopener">https://subbu.ca</a><br /><br />
       </p>
       <p class="info">
-        Help to improve this extension by sharing feature requests or by reporting any bug <a href="" target="_blank">here</a><br />
+        Help to improve this extension by sharing feature requests or by reporting any bug <a href="https://github.com/SubbuRamanathan/web-harvester-for-sitecore/issues" target="_blank">here</a><br />
       </p>
     </div>
   </body>
