Added SPE Module

--- a/options/options.html
+++ b/options/options.html
@@ -13,7 +13,7 @@
         <p class="note">Thank you for using this extension!</p>
     </div>
     <div class="container">
-      <p class="abstract">This Extension enables content administrators/developers to harvest any website's content into Sitecore</p>
+      <p class="abstract">This Extension enables content administrators/developers to harvest and import any website's content into Sitecore</p>
       <p class="content"><b>PREREQUISITES:</b></p>
       <ul>
         <li>Ensure that either ServicesOnPolicy or ServicesLocalOnlyPolicy(if Sitecore is hosted locally) is configured for Sitecore.Services.SecurityPolicy in the Sitecore.Services.Client.config of your Sitecore instance</li>
