Updated styles to support all dock options

--- a/devtools/devtools_scraper_panel.html
+++ b/devtools/devtools_scraper_panel.html
@@ -21,19 +21,19 @@
 				<nav class="absolute inset-0 nav nav--main ">
 					<ul class="w-100">
 						<li>
-							<a id="sidepane1" class="nav__item" title="Components" href="./views/Import.html">
+							<a id="sidepane1" class="nav__item" title="Import" href="./views/Import.html">
 								<img src="./images/import.svg" class="nav__item-icon" />
 								<span class="nav__item-label">Import</span>
 							</a>
 						</li>
 						<li>
-							<a id="sidepane2" class="nav__item" title="Data" href="./views/History.html">
+							<a id="sidepane2" class="nav__item" title="History" href="./views/History.html">
 								<img src="./images/history.svg" class="nav__item-icon" />		
 								<span class="nav__item-label">History</span>
 							</a>
 						</li>
 						<li>
-							<a id="sidepane3" class="nav__item" title="Info" href="./views/Settings.html">
+							<a id="sidepane3" class="nav__item" title="Settings" href="./views/Settings.html">
 								<img src="./images/settings.svg" class="nav__item-icon" />		
 								<span class="nav__item-label">Settings</span>
 							</a>
@@ -67,7 +67,7 @@
 				<img src="./images/cross.svg" />		
 			</a>
 			<div class="container">
-				<form id="sitemapForm" class="row g-3 p-3">
+				<form id="sitemapForm" class="row g-3 p-4">
 					<div class="row pb-2 w-100 form-group">
 						<div class="col-lg-4"><strong>URL Pattern:</strong></div>
 						<div class="col-lg-8"><input id="urlPattern" class="form-control outline-none"
@@ -111,7 +111,7 @@
 				<img src="./images/cross.svg" />
 			</a>
 			<form id="replaceTextForm">
-				<div id="replaceTextContainer" class="container p-4 overflow-auto h-100">
+				<div id="replaceTextContainer" class="container pr-0 pt-4 overflow-auto h-100">
 				</div>
 				<button id="confirmReplace" class="confirm-replace btn btn-info m-4" type="submit">Confirm</button>
 			</form>
